Fix building the tests with OBJDIR

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,5 +1,5 @@
 targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,shlint.log,tests.log,transport
-cppflags_force=-I../include -I$(OBJDIR).
+cppflags_force=-I../include -I. -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
