Register a missing dependency

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -10,6 +10,7 @@ dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pk
 [AppBroker]
 type=binary
 sources=appbroker.c
+depends=$(OBJDIR)../src/libApp.a
 ldflags=$(OBJDIR)../src/libApp.a
 
 [Dummy.h]
