Stick to the default stack protector

--- a/src/project.conf
+++ b/src/project.conf
@@ -1,7 +1,7 @@
 targets=libApp
 cppflags_force=-I ../include
 cflags_force=-fPIC `pkg-config --cflags libSystem libMarshall`
-cflags=-W -Wall -g -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all
+cflags=-W -Wall -g -O2 -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=`pkg-config --libs libSystem libMarshall`
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,appinterface.h,appmessage.h,appstatus.h,apptransport.h
