--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,7 +1,7 @@
 targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,shlint.log,tests.log,transport
 cppflags_force=-I../include -I. -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
-cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
+cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,shlint.sh,tests.sh
