Use config.ent for the Gtk-Doc documentation

--- a/doc/project.conf
+++ b/doc/project.conf
@@ -1,7 +1,8 @@
 subdirs=gtkdoc
-targets=AppBroker.1,AppBroker.html,AppClient.1,AppClient.html,gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/sgml.stamp,gtkdoc/html.stamp
+targets=AppBroker.1,AppBroker.html,AppClient.1,AppClient.html,gtkdoc/html.stamp,gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/xml.stamp
 dist=Makefile,AppBroker.css.xml,AppBroker.xml,AppClient.css.xml,AppClient.xml,docbook.sh,gtkdoc.sh,manual.css.xml
 
+#targets
 [AppBroker.1]
 type=script
 script=./docbook.sh
@@ -26,22 +27,23 @@ script=./docbook.sh
 depends=AppClient.css.xml,AppClient.xml,manual.css.xml
 #install=
 
+[gtkdoc/html.stamp]
+type=script
+script=./gtkdoc.sh
+depends=gtkdoc.sh,gtkdoc/libApp-docs.xml,$(OBJDIR)gtkdoc/xml.stamp,gtkdoc/xml/gtkdocentities.ent,../config.ent
+install=
+
 [gtkdoc/libApp.types]
 type=script
 script=./gtkdoc.sh
+depends=gtkdoc.sh
 
 [gtkdoc/tmpl.stamp]
 type=script
 script=./gtkdoc.sh
-depends=$(OBJDIR)gtkdoc/libApp.types
+depends=gtkdoc.sh,$(OBJDIR)gtkdoc/libApp.types
 
-[gtkdoc/sgml.stamp]
+[gtkdoc/xml.stamp]
 type=script
 script=./gtkdoc.sh
-depends=$(OBJDIR)gtkdoc/tmpl.stamp
-
-[gtkdoc/html.stamp]
-type=script
-script=./gtkdoc.sh
-depends=gtkdoc/libApp-docs.xml,$(OBJDIR)gtkdoc/sgml.stamp,$(OBJDIR)gtkdoc/tmpl.stamp
-install=
+depends=gtkdoc.sh,$(OBJDIR)gtkdoc/tmpl.stamp
