--- a/project.conf
+++ b/project.conf
@@ -1,7 +1,7 @@
 package=libApp
 version=0.3.2
-config=h,sh
-dist=Makefile,COPYING,README.md,config.h,config.sh
+config=ent,h,sh
+dist=Makefile,COPYING,README.md,config.ent,config.h,config.sh
 
 subdirs=data,doc,include,src,src/transport,tools,tests
 targets=tests
