Register the Gtk-Doc targets

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -2,3 +2,8 @@
 /AppBroker.html
 /AppClient.1
 /AppClient.html
+/gtkdoc/html
+/gtkdoc/html.stamp
+/gtkdoc/libApp.types
+/gtkdoc/tmpl.stamp
+/gtkdoc/xml.stamp
