Do not run any test by default

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -56,11 +56,13 @@ sources=lookup.c
 type=script
 script=./shlint.sh
 depends=$(OBJDIR)../src/libApp.a,shlint.sh
+enabled=0
 
 [tests.log]
 type=script
 script=./tests.sh
 depends=Test.expected,Test.interface,$(OBJDIR)AppBroker$(EXEEXT),appbroker.sh,$(OBJDIR)appclient$(EXEEXT),$(OBJDIR)appmessage$(EXEEXT),$(OBJDIR)appserver$(EXEEXT),$(OBJDIR)includes$(EXEEXT),$(OBJDIR)lookup$(EXEEXT),pkgconfig.sh,tests.sh,$(OBJDIR)transport$(EXEEXT),../src/transport/tcp.c,../src/transport/udp.c
+enabled=0
 
 [transport]
 type=binary
