--- a/.github/workflows/deforaos-c-ci_ubuntu-latest.yml
+++ b/.github/workflows/deforaos-c-ci_ubuntu-latest.yml
@@ -16,7 +16,7 @@ jobs:
     - name: bootstrap libSystem
       run: git clone https://github.com/DeforaOS/libSystem.git libSystem && for dir in include data src tools; do (cd libSystem/$dir && make PREFIX="$HOME/opt/DeforaOS" install); done
     - name: bootstrap configure
-      run: git clone https://github.com/DeforaOS/configure.git configure && (cd configure/src && PKG_CONFIG_PATH="$HOME/opt/DeforaOS/lib/pkgconfig" make PREFIX="$HOME/opt/DeforaOS" install)
+      run: git clone https://github.com/DeforaOS/configure.git configure && for dir in data src; do (cd configure/$dir && PKG_CONFIG_PATH="$HOME/opt/DeforaOS/lib/pkgconfig" make PREFIX="$HOME/opt/DeforaOS" install); done
     - name: bootstrap libMarshall
       run: git clone https://github.com/DeforaOS/libMarshall.git libMarshall && $HOME/opt/DeforaOS/bin/configure -p "$HOME/opt/DeforaOS" libMarshall && for dir in include data src tools; do (cd libMarshall/$dir && make PREFIX="$HOME/opt/DeforaOS" install); done
     - name: configure
