--- a/src/project.conf
+++ b/src/project.conf
@@ -6,12 +6,14 @@ ldflags_force=`pkg-config --libs libSystem libMarshall`
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,appinterface.h,appmessage.h,appstatus.h,apptransport.h
 
+#targets
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appmessage.c,appserver.c,appstatus.c,apptransport.c
 ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
+#sources
 [appclient.c]
 depends=appinterface.h,../include/App/appclient.h
 
