App: provide the path to the plug-ins

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -5,7 +5,7 @@ cflags_force=`pkg-config --cflags libSystem libMarshall`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=-L$(OBJDIR)../src `pkg-config --libs libSystem libMarshall` -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now
-dist=Makefile
+dist=Makefile,tools.sh
 
 #targets
 [AppBroker]
