--- a/include/App/project.conf
+++ b/include/App/project.conf
@@ -1,9 +1,8 @@
-includes=app.h,appclient.h,appmessage.h,appserver.h,appstatus.h,apptransport.h
-dist=Makefile
+includes=appclient.h,appmessage.h,appserver.h,appstatus.h,apptransport.h
+targets=app.h
+dist=Makefile,app.h.in
 
-[app.h]
-install=$(INCLUDEDIR)/System/App
-
+#includes
 [appclient.h]
 install=$(INCLUDEDIR)/System/App
 
@@ -18,3 +17,10 @@ install=$(INCLUDEDIR)/System/App
 
 [apptransport.h]
 install=$(INCLUDEDIR)/System/App
+
+#targets
+[app.h]
+type=script
+script=../../tools/subst.sh
+install=$(INCLUDEDIR)/System/App
+depends=app.h.in,../../config.sh
