--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -7,6 +7,7 @@ ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR).. -lApp
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.h,common.c
 
+#targets
 [self]
 type=plugin
 sources=self.c
@@ -19,26 +20,17 @@ sources=tcp.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
-[tcp.c]
-depends=common.h,common.c
-
 [tcp4]
 type=plugin
 sources=tcp4.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
-[tcp4.c]
-depends=tcp.c,common.h,common.c
-
 [tcp6]
 type=plugin
 sources=tcp6.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
-
-[tcp6.c]
-depends=tcp.c,common.h,common.c
 
 [template]
 type=plugin
@@ -50,23 +42,33 @@ sources=udp.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
-[udp.c]
-depends=common.h,common.c
-
 [udp4]
 type=plugin
 sources=udp4.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
 
-[udp4.c]
-depends=udp.c,common.h,common.c
-
 [udp6]
 type=plugin
 sources=udp6.c
 ldflags=-lsocket
 install=$(LIBDIR)/App/transport
+
+#sources
+[tcp.c]
+depends=common.h,common.c
+
+[tcp4.c]
+depends=tcp.c,common.h,common.c
+
+[tcp6.c]
+depends=tcp.c,common.h,common.c
+
+[udp.c]
+depends=common.h,common.c
+
+[udp4.c]
+depends=udp.c,common.h,common.c
 
 [udp6.c]
 depends=udp.c,common.h,common.c
