tools: introduce AppTransport
This tool currently allows listing the transport protocols available.

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,4 +1,4 @@
-targets=AppBroker,AppClient
+targets=AppBroker,AppClient,AppTransport
 cppflags_force=-I ../include
 cppflags=
 cflags_force=`pkg-config --cflags libSystem libMarshall`
@@ -17,3 +17,12 @@ install=$(BINDIR)
 type=binary
 sources=appclient.c
 #install=$(BINDIR)
+
+[AppTransport]
+type=binary
+sources=apptransport.c
+install=$(BINDIR)
+
+#sources
+[apptransport.c]
+depends=$(OBJDIR)../include/App/app.h,../include/App/apptransport.h
