libApp: partially fix the build with OBJDIR

--- a/src/project.conf
+++ b/src/project.conf
@@ -1,5 +1,5 @@
 targets=libApp
-cppflags_force=-I ../include
+cppflags_force=-I ../include -I ${OBJDIR}../include/App
 cflags_force=-fPIC `pkg-config --cflags libSystem libMarshall`
 cflags=-W -Wall -g -O2 -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=`pkg-config --libs libSystem libMarshall`
