--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,5 +1,5 @@
 targets=AppBroker,AppClient,AppTransport
-cppflags_force=-I ../include
+cppflags_force=-I ../include -I $(OBJDIR)../include/App
 cppflags=
 cflags_force=`pkg-config --cflags libSystem libMarshall`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector
