--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,5 +1,5 @@
 targets=self,tcp,tcp4,tcp6,template,udp,udp4,udp6
-cppflags_force=-I ../../include
+cppflags_force=-I ../../include -I ${OBJDIR}../../include/App
 cppflags=
 cflags_force=-fPIC `pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -D_FORTIFY_SOURCE=2 -fstack-protector
