tools: register more dependencies

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -24,5 +24,11 @@ sources=apptransport.c
 install=$(BINDIR)
 
 #sources
+[appbroker.c]
+depends=../include/App/appserver.h,../include/App/apptransport.h
+
+[appclient.c]
+depends=../include/App/appclient.h
+
 [apptransport.c]
 depends=$(OBJDIR)../include/App/app.h,../include/App/apptransport.h
