--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,10 @@
-targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,pkgconfig.log,shlint.log,tests.log,transport
+targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,distcheck.log,fixme.log,includes,lookup,pkgconfig.log,shlint.log,tests.log,transport
 cppflags_force=-I../include -I. -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
-dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,shlint.sh,tests.sh
+dist=System/App.h,appbroker.sh,distcheck.sh,fixme.sh,Makefile,pkgconfig.sh,shlint.sh,Test.expected,Test.interface,tests.sh
 
 #targets
 [AppBroker]
@@ -37,6 +37,12 @@ ldflags=$(OBJDIR)../src/libApp.a
 type=binary
 sources=appserver.c
 ldflags=$(OBJDIR)../src/libApp.a
+
+[distcheck.log]
+type=script
+script=./distcheck.sh
+depends=$(OBJDIR)../src/libApp.a,distcheck.sh
+enabled=0
 
 [fixme.log]
 type=script
