tests: import the "pclint" test

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,10 @@
-targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,clint.log,distcheck.log,fixme.log,includes,lookup,pkgconfig.log,shlint.log,tests.log,transport
+targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,clint.log,distcheck.log,fixme.log,includes,lookup,pclint.log,pkgconfig.log,shlint.log,tests.log,transport
 cppflags_force=-I../include -I. -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
-dist=System/App.h,appbroker.sh,clint.sh,distcheck.sh,fixme.sh,Makefile,pkgconfig.sh,shlint.sh,Test.expected,Test.interface,tests.sh
+dist=System/App.h,appbroker.sh,clint.sh,distcheck.sh,fixme.sh,Makefile,pclint.sh,pkgconfig.sh,shlint.sh,Test.expected,Test.interface,tests.sh
 
 #targets
 [AppBroker]
@@ -63,6 +63,12 @@ sources=includes.c
 [lookup]
 type=binary
 sources=lookup.c
+
+[pclint.log]
+type=script
+script=./pclint.sh
+depends=$(OBJDIR)../data/libApp.pc,pclint.sh
+enabled=0
 
 [pkgconfig.log]
 type=script
